<resources>
    <string name="app_name">Activity Code Challenge</string>
    <string name="bt_one">Text One</string>
    <string name="article_title">Beatles Anthology Vol. 1</string>
    <string name="article_subheading">Behind That Locked Door : Beatles Rarities!</string>
    <string name="article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the <i>Let It Be</i> album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series.
        For more information, see the Beatles Time Capsule at www.rockument.com.
    \n\n
    This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on <i>The Lost Lennon Tapes Vol. 28</i>, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions.
    \n\n
    <b>Highlights include:</b>
    \n\n
    <b><i>1. Cry for a Shadow</i></b> - Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.
    \n\n
    <b><i>2. My Bonnie</i></b> and <b><i>Ain’t She Sweet</i></b> — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).
    \n\n
    <b><i>3. Searchin</i></b> — A Jerry Leiber - Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys!
    \n\n
    <b><i>4. Love Me Do</i></b> — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version.
    \n\n
    <b><i>5. She Loves You – Till There Was You – Twist and Shout</i></b> — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark.
    \n\n
    <b><i>6. Leave My Kitten Alone</i></b> — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R&amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker.
    \n\n
    <b><i>7. One After 909</i></b> — A song recorded for the <i>Let It Be</i> album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R&amp;B feel to it.
    </string>


    <string name="bt_two">Text Two</string>
    <string name="judul_artikel">Asal Mula Danau Bagendit</string>
    <string name="article_subtitle"><b>Cerita Rakyat Jawa Barat</b></string>
    <string name="articletext"><b>Pada sebuah desa yang tanahnya subur di Garut</b>, hidup seorang janda kaya raya bernama Nyi Endit. Banyak penduduk di desa itu meminjam uang kepada Nyi Endit dengan bunga yang sangat tinggi
    \n\n
   Nyi Endit juga menyuruh para tukang pukulnya untuk menagih utang dari penduduk dengan paksa apabila ada yang tidak mampu membayar utang dan bunganya tepat waktu.
    \n\n
    Saat musim panen tiba, rumah Nyi Endit penuh dengan hasil panen. Namun, saat musim paceklik datang, penduduk banyak yang gagal panen dan menderita penyakit busung lapar.
    \n\n
    Nyi Endit justru berpesta pora bersama sanak keluarga, kerabat dan para tamunya. Ketika pesta berlangsung, tiba-tiba ada seorang pengemis yang meminta sedikit makanan kepada Nyi Endit. Dengan kesal, Nyi Endit menyuruh pengawalnya mengusir pengemis itu.
    \n\n
    Namun, saat pengawal akan menangkapnya, tiba-tiba tubuh para pengawal terpental sendiri beberapa meter jauhnya. Ternyata, pengemis tersebut mempunyai kesaktian.
    \n\n
    Pengemis itu lalu mengambil sebatang ranting pohon dan menancapkannya ke tanah. Dirinya meminta Nyi Endit atau pengawalnya untuk mencabut ranting itu.
    \n\n
    Nyi Endit lalu menyuruh pengawalnya untuk mencabut batang ranting tersebut, namun tidak satu pun pengawalnya mampu mencabut batang ranting itu.
    \n\n
    Setelah semuanya menyerah, barulah si pengemis mencabut sendiri ranting itu dengan mudahnya. Tiba-tiba, dari lubang bekas ranting yang tertancap itu keluar air yang memancar deras. Bersamaan itu, tiba-tiba si pengemis menghilang entah ke mana. Hujan lebat pun turun diselingi guncangan gempa bumi hebat.
    \n\n
    Dalam sekejap, desa Nyi Endit terendam banjir. Nyi Endit dan para pengawalnya, akhirnya tewas tenggelam. Saat ini, desa itu berubah menjadi sebuah danau besar dan dalam. Danau itu lalu dikenal dengan sebutan Situ Bagendit. Situ bermakna danau, sementara Bagendit diambil dari nama Nyi Endit. Konon di Situ Bagendit hidup seekor lintah besar yang dipercaya sebagai jelmaan Nyi Endit yang lintah darat.
    \n\n

    </string>


    <string name="bt_three">Text Three</string>
    <string name="title_article">Asal Mula Nama Baturaden</string>
    <string name="subtitle">Cerita Rakyat Jawa Tengah</string>
    <string name="text_article">
      Pada suatu hari, ada seorang putri yang sedang diserang ular raksasa. Kemudian datang pemuda bernama Suta yang berhasil menyelamatkan Putri Adipati tersebut dari gigitan ular besar. Suta adalah seorang pembantu Adipati yang bertugas mengurus kuda-kuda Adipati. Suta merupakan seorang pekerja yang jujur dan ulet. Suatu ketika Suta mendengar Putri Adipati berteriak-teriak minta tolong.
     \n\n
        Suta terkejut melihat seekor ular sangat besar menggantung di dahan pohon siap menelan putri Adipati yang ketakutan. Dengan keberanian luar biasa, tanpa memperdulikan keselamatan dirinya, Suta langsung berkelahi dengan ular itu. Dengan susah payah, akhirnya ular itu berhasil Suta taklukkan. Selang beberapa waktu, Suta yang menyukai sang puteri akhirnya memberanikan diri melamar Putri Adipati. Sejak peristiwa itu, Suta dan putri Adipati jadi saling mengenal dan jatuh cinta. Hingga akhirnya, Suta memberanikan diri untuk melamar putri Adipati.
     \n\n
     Tentu saja Adipati menolaknya dan merasa terhina dengan lamaran Suta. Adipati pun berusaha memisahkan putrinya dengan menangkap Suta dan menjebloskannya ke penjara. Setelah itu, Putri Adipati membawa Suta pergi jauh dari kadipaten dengan menunggang kuda. Putri Adipati membawa Suta Pergi dari Kadipaten. Di dalam penjara, Suta menderita sakit parah. Tanpa sepengetahuan Adipati, Putri meminta bantuan pengasuh kepercayaannya untuk membebaskan Suta.
     \n\n
     etelah itu, Putri Adipati membawa Suta pergi jauh dari kadipaten dengan menunggang kuda. Putri menyamar sebagai orang desa, sehingga mereka pun lolos dari pengejaran. Berkat kesabaran dan perawatan sang Putri, Suta pun sembuh dari sakitnya. Berhari-hari Suta dan Putri pergi mengembara sampai akhirnya mereka tiba di sebuah daerah subur di kaki Gunung Slamet. Daerah itu kemudian diberi nama Baturaden. Nama ini diambil dari kata Batur dan Raden. Batur berarti pembantu yang menunjukan kedudukan Suta sebagai pembantu Adipati. Sedangkan Raden berarti gelar kebangsawanan yang menunjukan kedudukan sang Putri. Daerah Baturaden sekarang menjadi daerah wisata yang berada di daerah Purwokerto, Jawa Tengah.
     \n\n

    </string>

</resources>
